# codex-pulse

./: .gitignore  README.ja.md  README.md  package.json  pyproject.toml
.hermes/plans/: 2026-04-20_123758-codex-pulse-rename-and-architecture-plan.md
_docs/: 01-product-thesis.md  02-system-architecture.md  03-trigger-model.md  04-collection-and-connectors.md  05-synthesis-ranking-and-suppression.md  06-output-delivery-and-actions.md  07-state-memory-and-audit.md  08-roadmap.md  09-migration-from-legacy.md  10-appendix-legacy-research.md  README.md
_docs/source-notes/: conversation-history.md  feeds-and-source-registry.md  x.md
docs/plans/: 2026-04-20-codex-pulse-phase1-foundation.md  2026-04-21-main-integration-audit.md
fixtures/audit/: trigger_quality.json
fixtures/feed_samples/: official_feed.xml
fixtures/google_workspace/: calendar_gap_window_events.json  gmail_messages.json  gmail_operational_messages.json
tests/: test_chatgpt_exporter.py  test_cli_morning_digest.py  test_codex_cli_summarizer.py  test_collection.py  test_db.py  test_direct_delivery.py  test_end_to_end_morning_digest.py  test_event_triggers.py  test_feed_connector.py  test_gap_window.py  test_gmail_connector.py  test_grok_history_fallback.py  test_identity_metadata.py  test_known_source_search.py  test_launchd_integration.py  test_local_connectors.py  test_location_arrival.py  test_location_context_connector.py  test_rendering.py  test_review_trigger_quality.py  test_state_runtime.py  test_synthesis.py  test_title_resolution.py  test_trigger_registry.py  test_x_url_connector.py
(+33 files in other folders)
