[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-pulse"
version = "0.1.0"
description = "Codex Pulse runtime"
requires-python = ">=3.11"

[project.scripts]
codex-pulse = "hermes_pulse.cli:main"
codex-pulse-direct-delivery = "hermes_pulse.direct_delivery:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
